--- a/shebao.html
+++ b/shebao.html
@@ -156,7 +156,7 @@
                     var filehtml = ''
                     if (filelist.length > 0) {
                         filelist.forEach(function (t, i) {
-                            filehtml += '<div></div><a href="' + commonURL + t.mename + '" target="_blank">下载文件' +
+                            filehtml += '<div></div><a href="' + commonURL + t.mename + '" target="_blank">' + t.name +
                                 (i + 1) +
                                 '</a>'
                         })
