--- a/enroll.html
+++ b/enroll.html
@@ -70,11 +70,12 @@
         <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editrow()">编辑</a>
         <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()">删除</a>
         <a href="#" class="easyui-linkbutton" iconCls="icon-large-chart" plain="true" onclick="uploadsalary()">学生信息</a>
-        <a href="files/enrolltemplate.xlsx" class="easyui-linkbutton fr" target="_blank">下载学生信息录取模板</a>
+        <a href="#" class="easyui-linkbutton fr downloadst" target="_blank">下载学生信息录取模板</a>
     </div>
 </div>
 <script src="js/common.js"></script>
 <script>
+    $(".downloadst").attr("href", commonURL + 'm/file/down.do?fileId=2');
     var editRowIndex = null;
     var entype = [
         {value: 1, text: '统招'},
