--- a/enroll.html
+++ b/enroll.html
@@ -229,7 +229,7 @@
         var row = $('#enrollist').datagrid('getSelected')
         $.messager.confirm('提示', '你确定要删除这条记录吗？', function (r) {
             if (r) {
-                $.post(commonURL + 'm/luqu/del.do', {wagesId: row.id}, function (json) {
+                $.post(commonURL + 'm/luqu/del.do', {luquId: row.id}, function (json) {
                     if (json.success) {
                         $('#enrollist').datagrid('deleteRow', rowIndex);
                     } else {
